# gitlab-glib

./: .buildconfig  .gitignore  README.md  meson.build
app/include/: gitlab-client.h  gitlab-project.h  gitlab.h
app/include/gitlab-glib/: gitlab-project.h
app/lib/pkgconfig/: gitlab-glib.pc  gitlab_glib.pc
examples/: meson.build  simple.c
gitlab-glib/: gitlab-client.c  gitlab-client.h  gitlab-project.c  gitlab-project.h  gitlab.map  meson.build
